[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-analyze-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.2",
    "python-dotenv>=1.0.1",
    "openai>=1.35.13",
    "yt-dlp>=2024.7.25",
    "opencv-python>=4.10.0.84",
    "Pillow>=10.4.0",
]

[tool.setuptools]
py-modules = ["main", "api", "download_video", "split", "bot", "analyze", "load_config"]
